[package]
name = "radiant"
version = "0.1.0"
edition = "2021"
description = "A modular Ethereum Beam chain client."
repository = "https://github.com/ch4r10t33r/radiant"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
